# hello

./: .gitignore  LICENSE  Makefile.am  configure.ac
lib/libshared/: Makefile.am  helloshared.c  helloshared.h
lib/libstatic/: Makefile.am  hellostatic.c  hellostatic.h
